--- a/app/src/main/res/layout/activity_learn_question.xml
+++ b/app/src/main/res/layout/activity_learn_question.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".ui.learn.LearnQuestionActivity">
 
+
     <TextView
         android:id="@+id/learn_question_text"
         android:layout_width="match_parent"
@@ -40,10 +41,10 @@
                 android:gravity="center" />
 
             <Button
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:id="@+id/learn_answer_a"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:gravity="center" />
         </TableRow>
@@ -53,21 +54,27 @@
             android:layout_height="match_parent">
 
             <Button
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:id="@+id/learn_answer_d"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
             <Button
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:id="@+id/learn_answer_c"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:layout_marginBottom="@dimen/activity_vertical_margin" />
         </TableRow>
 
     </TableLayout>
+
+    <Button
+        android:id="@+id/learn_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next_button" />
 
 </LinearLayout>
