--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">32dp</dimen>
+    <dimen name="activity_vertical_margin_small">16dp</dimen>
+    <dimen name="text_size_small">16sp</dimen>
+    <dimen name="text_size_big">24sp</dimen>
+    <dimen name="info_horizontal_margin">16sp</dimen>
 </resources>
