--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="text_size_small">16sp</dimen>
     <dimen name="text_size_big">24sp</dimen>
     <dimen name="info_horizontal_margin">16sp</dimen>
+    <dimen name="info_bottom_margin">64sp</dimen>
 </resources>
