--- a/app/src/main/res/layout/activity_learn_question.xml
+++ b/app/src/main/res/layout/activity_learn_question.xml
@@ -33,20 +33,20 @@
 
             <Button
                 android:id="@+id/learn_answer_b"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/answer_button_width"
+                android:layout_height="@dimen/answer_button_height"
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:gravity="center" />
+                android:singleLine="false" />
 
             <Button
                 android:id="@+id/learn_answer_a"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/answer_button_width"
+                android:layout_height="@dimen/answer_button_height"
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:gravity="center" />
+                android:singleLine="false" />
         </TableRow>
 
         <TableRow
@@ -55,18 +55,20 @@
 
             <Button
                 android:id="@+id/learn_answer_d"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/answer_button_width"
+                android:layout_height="@dimen/answer_button_height"
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin" />
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:singleLine="false" />
 
             <Button
                 android:id="@+id/learn_answer_c"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/answer_button_width"
+                android:layout_height="@dimen/answer_button_height"
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin" />
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:singleLine="false" />
         </TableRow>
 
     </TableLayout>
