--- a/app/src/main/res/layout/activity_learn_question.xml
+++ b/app/src/main/res/layout/activity_learn_question.xml
@@ -22,56 +22,35 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:textAlignment="center" />
 
-    <TableLayout
-        android:layout_width="match_parent"
+
+
+
+    <Button
+        android:id="@+id/learn_answer_b"
+        android:layout_width="@dimen/answer_button_width"
         android:layout_height="wrap_content"
-        android:stretchColumns="*">
+        android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <Button
+        android:id="@+id/learn_answer_a"
+        android:layout_width="@dimen/answer_button_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
-            <Button
-                android:id="@+id/learn_answer_b"
-                android:layout_width="@dimen/answer_button_width"
-                android:layout_height="@dimen/answer_button_height"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:singleLine="false" />
 
-            <Button
-                android:id="@+id/learn_answer_a"
-                android:layout_width="@dimen/answer_button_width"
-                android:layout_height="@dimen/answer_button_height"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:singleLine="false" />
-        </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <Button
+        android:id="@+id/learn_answer_d"
+        android:layout_width="@dimen/answer_button_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
-            <Button
-                android:id="@+id/learn_answer_d"
-                android:layout_width="@dimen/answer_button_width"
-                android:layout_height="@dimen/answer_button_height"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:singleLine="false" />
+    <Button
+        android:id="@+id/learn_answer_c"
+        android:layout_width="@dimen/answer_button_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
-            <Button
-                android:id="@+id/learn_answer_c"
-                android:layout_width="@dimen/answer_button_width"
-                android:layout_height="@dimen/answer_button_height"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:singleLine="false" />
-        </TableRow>
-
-    </TableLayout>
 
     <Button
         android:id="@+id/learn_next"
