--- a/app/src/main/res/layout/activity_test_question.xml
+++ b/app/src/main/res/layout/activity_test_question.xml
@@ -15,57 +15,31 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:textAlignment="center" />
 
-    <TableLayout
-        android:layout_width="match_parent"
+
+    <Button
+        android:id="@+id/test_answer_b"
+        android:layout_width="@dimen/answer_button_width"
         android:layout_height="wrap_content"
-        android:stretchColumns="*">
+        android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <Button
+        android:id="@+id/test_answer_a"
+        android:layout_width="@dimen/answer_button_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
-            <Button
-                android:id="@+id/test_answer_b"
-                android:layout_width="@dimen/answer_button_width"
-                android:layout_height="@dimen/answer_button_height"
-                android:singleLine="false"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:gravity="center" />
 
-            <Button
-                android:id="@+id/test_answer_a"
-                android:layout_width="@dimen/answer_button_width"
-                android:layout_height="@dimen/answer_button_height"
-                android:singleLine="false"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:gravity="center" />
-        </TableRow>
+    <Button
+        android:id="@+id/test_answer_d"
+        android:layout_width="@dimen/answer_button_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <Button
+        android:id="@+id/test_answer_c"
+        android:layout_width="@dimen/answer_button_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
-            <Button
-                android:id="@+id/test_answer_d"
-                android:layout_width="@dimen/answer_button_width"
-                android:layout_height="@dimen/answer_button_height"
-                android:singleLine="false"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin" />
-
-            <Button
-                android:id="@+id/test_answer_c"
-                android:layout_width="@dimen/answer_button_width"
-                android:layout_height="@dimen/answer_button_height"
-                android:singleLine="false"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin" />
-        </TableRow>
-
-    </TableLayout>
 
 </LinearLayout>
