--- a/app/src/main/res/layout/activity_test_question.xml
+++ b/app/src/main/res/layout/activity_test_question.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textSize="@dimen/text_size_big" />
 
 
     <Button
