--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="button">#b6e3ff</color>
+    <color name="incorrect_red">#e57373</color>
+    <color name="correct_green">#81c784</color>
 </resources>
