--- a/app/src/main/res/layout/fragment_learn.xml
+++ b/app/src/main/res/layout/fragment_learn.xml
@@ -16,6 +16,7 @@
 
     <TextView
         android:id="@+id/learn_length_label"
+        android:text="@string/question_number_learn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
