--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -15,14 +15,14 @@
         android:textAlignment="center" />
 
     <TextView
-        android:id="@+id/text_notifications"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:text="@string/question_number_test"
         android:textAlignment="center"
-        android:textSize="20sp" />
+        android:textSize="@dimen/text_size_big" />
 
     <Spinner
         android:id="@+id/test_length_spinner"
