--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,5 +3,6 @@
     <string-array name="test_lengths_array">
         <item>10</item>
         <item>20</item>
+        <item>50</item>
     </string-array>
 </resources>
