--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,13 +2,13 @@
 <resources>
     <color name="colorSecondary">#1565c0</color>
     <color name="colorPrimaryDark">#5e92f3</color>
-    <color name="colorAccent">#82b1ff</color>
+    <color name="colorAccent">#C9DDFF</color>
     <color name="colorPrimary">#6a1b9a</color>
     <color name="colorSecondaryDark">#38006b</color>
     <color name="colorSecondaryLight">#9c4dcc</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="button">#b6e3ff</color>
+    <color name="button">#A6DAF5</color>
     <color name="incorrect_red">#e57373</color>
     <color name="correct_green">#81c784</color>
 </resources>
