--- a/app/src/main/res/layout/fragment_learn.xml
+++ b/app/src/main/res/layout/fragment_learn.xml
@@ -29,9 +29,9 @@
         android:id="@+id/learn_length_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin_small"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/input_horizontal_margin"
+        android:layout_marginTop="@dimen/text_size_small"
+        android:layout_marginEnd="@dimen/input_horizontal_margin"
         android:inputType="numberSigned" />
 
     <TextView
